--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,7 @@ button {
   }
 }
 
+html,
 body {
   overflow-x: hidden;
 }
